--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,1 +1,5 @@
-<h3>Footer</h3>
+<div class="container-fluid bg-body-tertiary mt-4">
+    <div class="container py-2">
+        <p class="text-center form-text fw-lighter">Mario Haro - Desafio Latam 2024 ®</p>
+    </div>
+</div>
