hito3: registro, login y logout completado

--- a/core/templates/perfil.html
+++ b/core/templates/perfil.html
@@ -1,1 +1,4 @@
-<h1>Este es el perfil, log out</h1>
+{% extends "base.html" %}
+{% block content %}
+<h1>Este es el perfil</h1>
+{% endblock content %}
