--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -16,9 +16,14 @@
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
           </li>
         </ul>
+        {% if not user.is_authenticated %}
         <a href="{% url "login" %}" class="btn btn-primary">Iniciar Sesión</a>
-        {% if usuario.is_active %}
-        <a href="#" class="btn btn-danger">Cerrar Sesión</a>
+        {% endif %}
+        {% if user.is_authenticated %}
+        <form action="{% url "logout" %}" method="post">
+            {% csrf_token %}
+            <button type="submit" class="btn btn-danger">Cerrar Sesión</button>
+        </form>
         {% endif %}
         <!--<form class="d-flex" role="search">
           <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
