--- a/core/templates/footer.html
+++ b/core/templates/footer.html
@@ -1,5 +1,6 @@
-<div class="container-fluid bg-body-tertiary mt-5">
-    <div class="container py-2">
-        <p class="text-center form-text fw-lighter">Mario Haro - Desafio Latam 2024 ®</p>
+<div class="container-fluid bg-body-tertiary mt-4">
+    <div class="container py-2 d-flex justify-content-between">
+        <p class="form-text fw-lighter">Copyright © 2024 Desafío Latam</p>
+        <p class="form-text fw-lighter">Design by Mario Haro</p>
     </div>
 </div>
