--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -4,17 +4,20 @@
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#">Hidden brand</a>
+        <!--<a class="navbar-brand">LOGO</a>-->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">Home</a>
+            <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}"><i class="bi bi-person-circle"></i></a>
           </li>
           <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}"><i class="bi bi-person-fill-add"></i></a>
+          </li>
+          <!--<li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
           <li class="nav-item">
             <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>
+          </li>-->
         </ul>
         {% if not user.is_authenticated %}
         <a href="{% url "login" %}" class="btn btn-primary">Iniciar Sesión</a>
