--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -2,3 +2,9 @@
 input:focus::placeholder {
     color: transparent;
   }
+
+/*ICONS*/
+.bi-person-fill-add, .bi-person-circle{
+  color: gray;
+  font-size: 35px;
+}
