--- a/core/templates/actualizar_usuario.html
+++ b/core/templates/actualizar_usuario.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Actualizar Usuario{% endblock title %}
 {% block content %}
 <div class="container">
 <h2 class='text-center'>Actualizar datos de {{usuario_get.nombre}}</h2>
