--- a/core/templates/perfil.html
+++ b/core/templates/perfil.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Perfil de {{ usuario.nombre }}{% endblock title %}
 {% block content %}
 <div class="container">
     <h2 class='text-center'>Perfil de: <span>{{ usuario.nombre }} {{ usuario.apellido}}</span></h2>
