--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% block title %}Iniciar Sesión{% endblock title %}
 {% block content %}
 <div class="container">
     <h2 class='text-center'>Inicia Sesión</h2>
