hito4: punto 1 lista de inmuebles por usuario

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -4,7 +4,9 @@ input:focus::placeholder {
   }
 
 /*ICONS*/
-.bi-person-fill-add, .bi-person-circle{
+.bi-person-fill-add,
+.bi-person-circle,
+.bi-house-add-fill{
   color: gray;
   font-size: 35px;
 }
