--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -10,7 +10,10 @@
             <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}"><i class="bi bi-person-circle"></i></a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'index' %}"><i class="bi bi-person-fill-add"></i></a>
+            <a class="nav-link active" aria-current="page" href="{% url 'crear_usuario' %}"><i class="bi bi-person-fill-add"></i></a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'index' %}"><i class="bi bi-house-add-fill"></i></a>
           </li>
           <!--<li class="nav-item">
             <a class="nav-link" href="#">Link</a>
