--- a/core/templates/perfil.html
+++ b/core/templates/perfil.html
@@ -2,28 +2,62 @@
 {% block title %}Perfil de {{ usuario.nombre }}{% endblock title %}
 {% block content %}
 <div class="container">
-    <h2 class='text-center'>Perfil de: <span>{{ usuario.nombre }} {{ usuario.apellido}}</span></h2>
-    <div class='col-8 col-md-7 col-lg-6 col-xl-5 mx-auto'>
-        <div class="text-center form-text">Si quieres actualizar tus datos <a href="{% url "actualizar_usuario" %}" class="btn-primary">click aquí</a></div>
-        <div class="mb-3">
-            <label class="form-label">tipo de usuario</label>
-            <input class="form-control" type="text" value="{{ usuario.tipo_usuario }}" disabled>
+    <div class="row">
+        <div class='col-3'>
+            <h2 class='text-center'>Perfil de: <span>{{ usuario.nombre }} {{ usuario.apellido}}</span></h2>
+            <div class="mb-3">
+                <label class="form-label">tipo de usuario</label>
+                <input class="form-control" type="text" value="{{ usuario.tipo_usuario }}" disabled>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Rut</label>
+                <input class="form-control" type="text" value="{{ usuario.rut }}" disabled>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Dirección</label>
+                <input class="form-control" type="text" value="{{ usuario.direccion }}" disabled>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Teléfono personal</label>
+                <input class="form-control" type="text" value="{{ usuario.telefono_personal }}" disabled>
+            </div>
+            <div class="mb-3">
+                <label class="form-label">Correo electrónico</label>
+                <input class="form-control" type="text" value="{{ usuario.correo_electronico }}" disabled>
+            </div>
+            <div class="text-center form-text">Si quieres actualizar tus datos <a href="{% url "actualizar_usuario" %}" class="btn-primary">click aquí</a></div>
         </div>
-        <div class="mb-3">
-            <label class="form-label">Rut</label>
-            <input class="form-control" type="text" value="{{ usuario.rut }}" disabled>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Dirección</label>
-            <input class="form-control" type="text" value="{{ usuario.direccion }}" disabled>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Teléfono personal</label>
-            <input class="form-control" type="text" value="{{ usuario.telefono_personal }}" disabled>
-        </div>
-        <div class="mb-3">
-            <label class="form-label">Correo electrónico</label>
-            <input class="form-control" type="text" value="{{ usuario.correo_electronico }}" disabled>
+
+        <div class="col-9">
+            <h2 class='text-center'>Lista de inmuebles</span></h2>
+            <table class="table table-hover">
+                <thead>
+                  <tr>
+                    <th scope="col">#</th>
+                    <th scope="col">Tipo</th>
+                    <!--<th scope="col">Nombre</th>-->
+                    <th scope="col">Dirección</th>
+                    <th scope="col">Comuna</th>
+                    <th scope="col">Precio</th>
+                    <th scope="col">Estado</th>
+                    <th scope="col">Arrendatario</th>
+                  </tr>
+                </thead>
+                <tbody class="table-group-divider">
+                    {% for inmueble in inmuebles  %}
+                        <tr>
+                            <th scope="row">{{ forloop.counter }}</th>
+                            <td>{{ inmueble.tipo_inmueble }}</td>
+                            <!--<td>{{ inmueble.nombre }}</td>-->
+                            <td>{{ inmueble.direccion }}</td>
+                            <td>{{ inmueble.comuna.nombre_comuna }}</td>
+                            <td>{{ inmueble.precio_arriendo }}</td>
+                            <td>{{ estado }}</td>
+                            <td>{{ inmueble.arrendatario.nombre }}</td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+              </table>
         </div>
     </div>
 </div>
