--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -7,14 +7,27 @@
         <!--<a class="navbar-brand">LOGO</a>-->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}"><i class="bi bi-person-circle"></i></a>
+            <a class="nav-link active" aria-current="page" href="admin/" title="Admin">
+              <i  class="bi bi-door-open" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Admin"></i>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'crear_usuario' %}"><i class="bi bi-person-fill-add"></i></a>
+            <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}" title="Perfil">
+              <i class="bi bi-person-bounding-box" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Perfil"></i>
+            </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'index' %}"><i class="bi bi-house-add-fill"></i></a>
+            <a class="nav-link active" aria-current="page" href="{% url 'crear_usuario' %}" title="Crear usuario">
+              <i class="bi bi-person-fill-add" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Crear usuario"></i>
+            </a>
           </li>
+          {% if user.is_authenticated and usuario.tipo_usuario == 'arrendador' %}
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="{% url 'crear_inmueble' %}" title="Crear Inmueble">
+              <i class="bi bi-house-add-fill" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Crear Inmueble"></i>
+            </a>
+          </li>
+          {% endif %}
           <!--<li class="nav-item">
             <a class="nav-link" href="#">Link</a>
           </li>
