hito4 (punto 2): actualizar inmueble listo

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -1,5 +1,6 @@
 /*para hacer desaparecer el placeholder*/
-input:focus::placeholder {
+input:focus::placeholder,
+textarea:focus::placeholder{
     color: transparent;
   }
 
