--- a/core/templates/crear_usuario.html
+++ b/core/templates/crear_usuario.html
@@ -22,6 +22,7 @@
             <label class="form-label">Repita la contraseña</label>
             <input name='password_repeat' type="password" class="form-control" required>
         </div>
+        <!--incorporar boton de declaración de reglas boton tipo checkbox-->
         <button type="submit" class="btn btn-primary my-2 col-12">Regístrate</button>
         <div class="text-center form-text">O si ya tienes una cuenta <a href="{% url "login" %}" class="btn-primary">Inicia sesión</a></div>
     </form>
