hito4 (punto3): vista de todos los inmuebles

--- a/core/static/css/style.css
+++ b/core/static/css/style.css
@@ -9,7 +9,8 @@ textarea:focus::placeholder{
 .bi-person-bounding-box,
 .bi-person-circle,
 .bi-person-fill-add,
-.bi-house-add-fill{
+.bi-house-add-fill,
+.bi-search{
   color: gray;
   font-size: 35px;
 }
