--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -7,33 +7,32 @@
         <!--<a class="navbar-brand">LOGO</a>-->
         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="admin/" title="Admin">
+            <a class="nav-link active" aria-current="page" href="/admin/">
               <i  class="bi bi-door-open" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Admin"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}" title="Perfil">
+            <a class="nav-link active" aria-current="page" href="{% url 'perfil' %}">
               <i class="bi bi-person-bounding-box" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Perfil"></i>
             </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'crear_usuario' %}" title="Crear usuario">
+            <a class="nav-link active" aria-current="page" href="{% url 'crear_usuario' %}">
               <i class="bi bi-person-fill-add" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Crear usuario"></i>
             </a>
           </li>
           {% if user.is_authenticated and usuario.tipo_usuario == 'arrendador' %}
           <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="{% url 'crear_inmueble' %}" title="Crear Inmueble">
+            <a class="nav-link active" aria-current="page" href="{% url 'crear_inmueble' %}">
               <i class="bi bi-house-add-fill" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Crear Inmueble"></i>
             </a>
           </li>
           {% endif %}
-          <!--<li class="nav-item">
-            <a class="nav-link" href="#">Link</a>
-          </li>
           <li class="nav-item">
-            <a class="nav-link disabled" aria-disabled="true">Disabled</a>
-          </li>-->
+            <a class="nav-link active" aria-current="page" href="{% url "listar_inmuebles" %}" title="Buscar">
+              <i class="bi bi-search" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Buscar"></i>
+            </a>
+          </li>
         </ul>
         {% if not user.is_authenticated %}
         <a href="{% url "login" %}" class="btn btn-primary">Iniciar Sesión</a>
