--- a/core/templates/crear_usuario.html
+++ b/core/templates/crear_usuario.html
@@ -9,6 +9,14 @@
           <label class="form-label">Nombre de usuario</label>
           <input name='username' type="text" class="form-control" placeholder='Ej: usuario1' required>
         </div>
+        <div class="my-2">
+          <label class="form-label">Tipo de usuario</label>
+            <select name="tipo_usuario" class="form-select form-select-sm">
+              <option selected>Selecciona...</option>
+              <option name="arrendatario">arrendatario</option>
+              <option name="arrendador">arrendador</option>
+            </select>
+          </div>
         <div class="my-3">
           <label class="form-label">Rut</label>
           <input name='rut' type="text" class="form-control" maxlength='9' placeholder='Ej: 111111111' required>
