--- a/core/templates/buscar_inmuebles.html
+++ b/core/templates/buscar_inmuebles.html
@@ -1,31 +1,32 @@
 {% extends "base.html" %}
-{% block title %}Inicio - Inmuebles{% endblock title %}
+{% block title %}Buscador de Inmuebles{% endblock title %}
 {% block content %}
 <!--Buscador-->
 <div class="container">
     <div class="row mb-3">
         <h5 class="text-center">Filtrar por...</h5>
-        <form class="text-center" action="filtrar_busqueda_inmuebles" method="post">
+        <form class="text-center" action="" method="post">
             {% csrf_token %}
             <select class="col-5" name="region" class="form-select form-select-sm" id="select_region" onchange="getAlbum()">
                 <option selected>Selecciona región...</option>
-                {% for comuna in comunas %}
-                    <option value="{{ comuna }}">{{ comuna }}</option>
+                {% for region in regiones %}
+                    <option value="{{ region }}">{{ region }}</option>
                 {% endfor %}
             </select>
-            <select class="col-5" name="comunas" class="form-select form-select-sm" aria-label="Small select example" id="select_comuna">
+            <select class="col-5" name="comuna" class="form-select form-select-sm" aria-label="Small select example" id="select_comuna">
                 <option value="">----</option>                
             </select>
             <button type="submit" class="btn btn-warning">Buscar</button>
         </form>
     </div>
 </div>
+<!--Fin Buscador-->
+
 <!--Inicio Cards-->
 <div class="container">
     <div class="row row-cols-1 row-cols-lg-4 g-3 mb-5">
     {% for inmueble in inmuebles %}
-    {{forloop.counter}}
-        <div class="col">
+        <div class="col mx-auto">
             <div class="card">
                 <!--<img class="card-img-top" src="{{ inmueble.img_url }}" alt="flan" />-->
                 <div class="card-body d-flex flex-column justify-content-between">
@@ -48,7 +49,7 @@
                     <h6 class="card-subtitle fs-4">
                     $ {{ inmueble.precio_arriendo}}
                     </h6>
-                    <form action="" method="post">
+                    <form action="solicitud_arriendo" method="post">
                         {% csrf_token %}
                         <input name="id" value="{{inmueble.id}}" type="text" hidden>
                         <button type="submit" class="btn btn-success">Arrendar</button>
@@ -57,41 +58,6 @@
             </div>
         </div>
     {% endfor %}
-
-    {% comment %} {% if request.method == 'POST' %}
-    {% for comuna in comunas %}
-    <div class="col">
-        <div class="card">
-            <div class="card-body d-flex flex-column justify-content-between">
-                <h4 class="card-title">
-                    {% if inmueble.tipo_inmueble == 'casa' %}
-                    <i class="bi bi-house"></i>
-                    {% elif inmueble.tipo_inmueble == 'departamento' %}
-                    <i class="bi bi-building"></i>
-                    {% else %}
-                    <i class="bi bi-tree"></i>
-                    {% endif %}
-                    {{ comuna.inmueble.nombre }}
-                </h4>
-                <p class="card-text">{{ inmueble.descripcion }}</p>
-            </div>
-            <blockquote class="blockquote-footer m-0">
-                <i class="bi bi-geo-alt"></i> {{inmueble.direccion}} <cite>{{inmueble.comuna.nombre_comuna}}</cite>
-            </blockquote>
-            <div class="card-body">
-                <h6 class="card-subtitle fs-4">
-                $ {{ inmueble.precio_arriendo}}
-                </h6>
-                <form action="" method="post">
-                    {% csrf_token %}
-                    <input name="id" value="{{inmueble.id}}" type="text" hidden>
-                    <button type="submit" class="btn btn-success">Arrendar</button>
-                </form>
-            </div>
-        </div>
-    </div>
-    {% endfor %}
-    {% endif %} {% endcomment %}
     </div>
 </div>
 {% endblock content %}
