--- a/core/templates/buscar_inmuebles.html
+++ b/core/templates/buscar_inmuebles.html
@@ -13,10 +13,10 @@
                     <option value="{{ region }}">{{ region }}</option>
                 {% endfor %}
             </select>
-            <select class="col-5" name="comuna" class="form-select form-select-sm" aria-label="Small select example" id="select_comuna">
+            <select class="col-4" name="comuna" class="form-select form-select-sm" aria-label="Small select example" id="select_comuna">
                 <option value="">----</option>                
             </select>
-            <button type="submit" class="btn btn-warning">Buscar</button>
+            <button type="col-1 submit" class="btn btn-warning">Buscar</button>
         </form>
     </div>
 </div>
