--- a/core/templates/editar_inmueble.html
+++ b/core/templates/editar_inmueble.html
@@ -17,11 +17,11 @@
         </div>
         <div class="my-3">
           <label class="form-label">Nombre de inmueble</label>
-          <input name="nombre" value="{{inmueble.nombre}}" type="text" class="form-control" placeholder="{{inmueble_get.nombre}}" required>
+          <input name="nombre" value="{{inmueble.nombre}}" type="text" class="form-control" placeholder="__{{inmueble_get.nombre}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">Dirección</label>
-          <input name='direccion' value="{{inmueble.direccion}}" type="text" class="form-control" placeholder='{{inmueble_get.direccion}}' required>
+          <input name='direccion' value="{{inmueble.direccion}}" type="text" class="form-control" placeholder="__{{inmueble_get.direccion}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">Comuna</label>
@@ -34,23 +34,23 @@
         </div>
         <div class="my-3">
           <label class="form-label">M2 construidos</label>
-          <input name='m2_construidos' value="{{inmueble.m2_construidos}}" type="text" class="form-control" maxlength='4' placeholder="{{inmueble_get.m2_construidos}}" required>
+          <input name='m2_construidos' value="{{inmueble.m2_construidos}}" type="text" class="form-control" maxlength='4' placeholder="_{{inmueble_get.m2_construidos}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">M2 totales</label>
-          <input name='m2_totales' value="{{inmueble.m2_totales}}" type="text" class="form-control" maxlength='4' required>
+          <input name='m2_totales' value="{{inmueble.m2_totales}}" type="text" class="form-control" maxlength='4' placeholder="_{{inmueble_get.m2_totales}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">Cantidad de habitaciones</label>
-          <input name='cantidad_habitaciones' value="{{inmueble.cantidad_habitaciones}}" type="text" class="form-control" maxlength='2' required>
+          <input name='cantidad_habitaciones' value="{{inmueble.cantidad_habitaciones}}" type="text" class="form-control" maxlength='2' placeholder="_{{inmueble_get.cantidad_habitaciones}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">Cantidad de baños</label>
-          <input name='cantidad_banos' value="{{inmueble.cantidad_banos}}" type="text" class="form-control" maxlength='1' required>
+          <input name='cantidad_banos' value="{{inmueble.cantidad_banos}}" type="text" class="form-control" maxlength='1' placeholder="_{{inmueble_get.cantidad_banos}}" required>
         </div>
         <div class="my-3">
           <label class="form-label">Cantidad de estacionamientos</label>
-          <input name='cantidad_estacionamientos' value="{{inmueble.cantidad_estacionamientos}}" type="text" class="form-control" maxlength='2' required>
+          <input name='cantidad_estacionamientos' value="{{inmueble.cantidad_estacionamientos}}" type="text" class="form-control" maxlength='2' placeholder="_{{inmueble_get.cantidad_estacionamientos}}" required>
         </div>
         <div class="input-group my-3">
             <span class="input-group-text">$</span>
