--- a/core/templates/navbar.html
+++ b/core/templates/navbar.html
@@ -5,7 +5,8 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
         <!--<a class="navbar-brand">LOGO</a>-->
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        
+        <ul class="navbar-nav mb-2 mb-lg-0">
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="/admin/">
               <i  class="bi bi-door-open" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Admin"></i>
@@ -34,16 +35,24 @@
             </a>
           </li>
         </ul>
-        {% if not user.is_authenticated %}
-        <a href="{% url "login" %}" class="btn btn-primary">Iniciar Sesión</a>
-        {% endif %}
+
+        <div class="mx-auto"><h1 class="text-danger">airebnb</h1></div>
+
         {% if user.is_authenticated %}
         <span class="nav-link mx-2">Hola {{user.username}}</span>
+          {% if usuario.tipo_usuario == 'arrendador' or usuario_get.tipo_usuario == 'arrendador'%}
+          <a class="" data-bs-toggle="offcanvas" href="#offcanvasRight" role="button" aria-controls="offcanvasRight">
+            <i class="me-2 bi bi-bell-fill" data-bs-toggle="tooltip" data-bs-placement="bottom" data-bs-title="Ver solicitudes"></i>
+          </a>
+          {% endif %}
         <form action="{% url "logout" %}" method="post">
             {% csrf_token %}
             <button type="submit" class="btn btn-danger">Cerrar Sesión</button>
         </form>
+        {% else %}
+        <a href="{% url "login" %}" class="btn btn-primary">Iniciar Sesión</a>
         {% endif %}
+        
       </div>
     </div>
   </nav>
