--- a/core/templates/registration/login.html
+++ b/core/templates/registration/login.html
@@ -8,14 +8,14 @@
         <div class="input-group my-2">
             <span class="input-group-text">@</span>
             <div class="form-floating">
-            <input name='username' type="text" class="form-control" id="floatingInputGroup1" placeholder="Username">
+            <input name='username' type="text" class="form-control" id="floatingInputGroup1" placeholder="Username" required>
             <label for="floatingInputGroup1">Username</label>
             </div>
         </div>
         <div class="input-group my-2">
             <span class="input-group-text">#</span>
             <div class="form-floating">
-            <input name='password' type="password" class="form-control" id="floatingPassword" placeholder="Password">
+            <input name='password' type="password" class="form-control" id="floatingPassword" placeholder="Password" required>
             <label for="floatingPassword">Password</label>
             </div>
         </div>
